discussion/kv_engine/157427/157427_rev30_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45654: Move to pausable task

Change-Id: I35632ee6911c5d49c51fccecee1786cb40589b8f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-07-27 13:45:17.000000000
Message: 
Uploaded patch set 30.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-27 13:55:02.000000000
Message: 
Patch Set 30: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38079/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38079/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10869/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1501:9: error: no matching function for call to "format" [clang-diagnostic-error]
        fmt::format(stdout,
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2074:36: note: candidate template ignored: substitution failure [with S = _IO_FILE *, Args = <char const (&)[56], unsigned short &, bool &, WarmupState &>]: no type named "type" in "fmt::v7::detail::char_t_impl<_IO_FILE *, void>"
FMT_INLINE std::basic_string<Char> format(const S& format_str, Args&&... args) {
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1523:13: error: no matching function for call to "format" [clang-diagnostic-error]
            fmt::format(stdout,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2074:36: note: candidate template ignored: substitution failure [with S = _IO_FILE *, Args = <char const (&)[65], unsigned short &, bool &, WarmupState &>]: no type named "type" in "fmt::v7::detail::char_t_impl<_IO_FILE *, void>"
FMT_INLINE std::basic_string<Char> format(const S& format_str, Args&&... args) {
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1530:17: error: no matching function for call to "format" [clang-diagnostic-error]
                fmt::format(stdout,
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:2074:36: note: candidate template ignored: substitution failure [with S = _IO_FILE *, Args = <char const (&)[47]>]: no type named "type" in "fmt::v7::detail::char_t_impl<_IO_FILE *, void>"
FMT_INLINE std::basic_string<Char> format(const S& format_str, Args&&... args) {
                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10869/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1501:9:
error: no matching function for call to "format" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10869/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32465/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.cc:1501:9:
error: no matching function for call to "format"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32465/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/487/ : FAILURE

Compile error at [2021-07-27T13:47:37.928Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:1501:9:
error: no matching function for call to "format"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/487/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12985/ : FAILURE

Compile error at [2021-07-27T13:47:00.640Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:1501:9:
error: no matching function for call to "format"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12985/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12457/ : FAILURE

Compile error at [2021-07-27T13:47:14.456Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/warmup.cc:1505:35:
error: no matching function for call to ?format(_IO_FILE*&, const char [56], uint16_t&, bool&, WarmupState&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12457/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11572/ : FAILURE

Compile error at [2021-07-27T13:48:45.139Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/warmup.cc:1501:9:
error: no matching function for call to "format"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11572/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20536/ : FAILURE

Compile error at [2021-07-27T13:47:41.072Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:1501:9:
error: no matching function for call to "format"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20536/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/458/ : FAILURE

Compile error at [2021-07-27T13:47:32.085Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/warmup.cc:1505:35:
error: no matching function for call to ?format(_IO_FILE*&, const char [56], uint16_t&, bool&, WarmupState&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/458/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12636/ : FAILURE

Compile error at [2021-07-27T13:48:49.108Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/warmup.cc:1505:35:
error: no matching function for call to ?format(_IO_FILE*&, const char [56], uint16_t&, bool&, WarmupState&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12636/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9529/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
